add credits in html

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--
+  Credits: Character names are from top baby names according to the  from US government, form from Colorado State University,
+  and Writing genres from Wikipedia
+-->
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -7,8 +11,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site for finding random genres to use to destroy writer's block"
     />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Open+Sans');
+    </style>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Random Genre Generator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
